--- a/MainProject/imgui.ini
+++ b/MainProject/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=60,60
-Size=339,180
+Pos=197,349
+Size=566,244
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=535,-64
+Size=561,680
+Collapsed=0
+
+[Window][Another Window]
+Pos=153,343
+Size=198,71
 Collapsed=0
 
